fixed form input background color on dark mode

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -136,6 +136,10 @@
 
   .form-wrapper .block {
     margin-block: 0;
+
+    & input {
+      background-color: var(--color-foreground);
+    }
   }
 }
 
